# vector_accelerator

./: .clang-format  .gitignore  CMakeLists.txt  VPE.cpp  VPE.hpp  VectorType.hpp  mu_VPE.cpp  vector_test.cpp  vector_test.hpp
VPE/: CMakeLists.txt  mu_VPE.cpp  mu_VPE.hpp  mu_vpe.cpp  mu_vpe.hpp
inc/: user_defined_float_types.hpp  vector.hpp  vectorAccelerator.hpp
inc/user_defined_float_types/YJH/: CMakeLists.txt  TypeFloat.cpp  TypeFloat.h  TypeFloat_Origin.h
inc/user_defined_float_types/acgessler_half_float-master/: umHalf.inl
src/: vector.cpp  vector_accelerator.cpp
test/: CMakeLists.txt  MetisXHelpers.cmake  VectorAcceleratorTester.hpp  test_cases.hpp  test_main.cpp  vectorAcceleratorPass.hpp  vector_test  vector_test.cpp  vector_test.hpp
ut/: CMakeLists.txt  VPE_test.cpp  VPE_tester.hpp  ut_runner.cpp  vector_test_helper_func.cpp
